fix (HSK-456) fix vertical adjustment of modal elements on mobile safari

--- a/source/_patterns/02-organisms/01-components/01-modal.scss
+++ b/source/_patterns/02-organisms/01-components/01-modal.scss
@@ -8,9 +8,8 @@
 
   @media only screen and (min-width: $breakpointTablet) {
     margin: 0 auto;
-    width: 80%;
-    height: auto;
-    max-height: 80%;
+    width: 85%;
+    max-height: 85%;
     min-width: 280px;
     max-width: 680px;
   }
